# double_try

./: README.md
decision_simulate/: CMakeLists.txt  README.md  package.xml
decision_simulate/launch/: robot_decision_simulation.launch
decision_simulate/map/: icra2020.pgm
decision_simulate/src/: referee.cpp  referee.h  robot.cpp  robot.h  shootinfo.cpp  simulate.cpp  simulate.h
decision_simulate/world/: decision_simulate.world
localization_rplidar_node/: CMakeLists.txt  package.xml
localization_rplidar_node/launch/: rplidar.launch  testmap.launch
localization_rplidar_node/src/: amcl.cpp  amcl.h  amcl_config.h  localizationtest_node.cpp  localizationtest_node.h  rplidartest_node.cpp
